--- a/frontend/src/app/routes/test/info-alert/info-alert.component.html
+++ b/frontend/src/app/routes/test/info-alert/info-alert.component.html
@@ -8,10 +8,10 @@
         <p class="info-text">
             O progresso só será salvo ao final de cada fase.
         </p>
-        <button mat-dialog-close id="modal-main-button" (click)="continue()">
+        <button mat-dialog-close mat-raised-button id="modal-main-button" (click)="continue()">
             Continuar
         </button>
-        <button mat-dialog-close id="modal-secondary-button" (click)="goToPersonality()">
+        <button mat-dialog-close mat-raised-button id="modal-secondary-button" (click)="goToPersonality()">
                 Sair
         </button>
     </div>
