--- a/frontend/src/app/routes/test/info-code/info-code.component.html
+++ b/frontend/src/app/routes/test/info-code/info-code.component.html
@@ -11,7 +11,7 @@
             Ele permite você retomar o jogo de onde parou e recuperar seus resultados.
         </p>
         <div>
-            <button mat-dialog-close id="modal-main-button" style="cursor: pointer;" (click)="goToTest()">
+            <button mat-dialog-close mat-raised-button id="modal-main-button" style="cursor: pointer;" (click)="goToTest()">
                 Entendido!
             </button>
         </div>
