--- a/frontend/src/app/routes/test/info-completed/info-completed.component.html
+++ b/frontend/src/app/routes/test/info-completed/info-completed.component.html
@@ -6,7 +6,7 @@
             Seu resultado está pronto! Ele vai dizer em
             quais áreas você pode ter mais aptidão.
         </p>
-        <button mat-dialog-close id="modal-main-button" (click)="goToResult()">
+        <button mat-dialog-close mat-raised-button id="modal-main-button" (click)="goToResult()">
             Ver meu resultado
         </button>
     </div>
