--- a/frontend/src/app/routes/test/info-fase/info-fase.component.html
+++ b/frontend/src/app/routes/test/info-fase/info-fase.component.html
@@ -8,12 +8,12 @@
             Não se preocupe, seu progresso será salvo.
         </p>
         <div class="example-button-row">
-            <button mat-button mat-dialog-close class="button" style="background-color: #57a881;" (click)="goToPersonality()">
+            <button mat-button mat-dialog-close mat-raised-button class="button" style="background-color: #57a881;" (click)="goToPersonality()">
                 <p class="btn">
                     Voltar
                 </p>
             </button>
-            <button mat-button mat-dialog-close class="button" style="background-color: #3C6A54;" (click)="continue()">
+            <button mat-button mat-dialog-close mat-raised-button class="button" style="background-color: #3C6A54;" (click)="continue()">
                 <p class="btn">
                    Continuar
                 </p>
