--- a/frontend/src/app/routes/test/info-history/info-history.component.html
+++ b/frontend/src/app/routes/test/info-history/info-history.component.html
@@ -6,7 +6,7 @@
       {{ personalityData.storyDescription}}
     </p>
     <div class="example-button-row">
-      <button id="modal-main-button" mat-dialog-close (click)="continue()">
+      <button id="modal-main-button" mat-dialog-close mat-raised-button (click)="continue()">
           Vamos em frente!
       </button>
     </div>
