--- a/frontend/src/app/routes/test/info/test-info.component.html
+++ b/frontend/src/app/routes/test/info/test-info.component.html
@@ -11,7 +11,7 @@
             Em um lindo dia, você sai para navegar em mares desconhecidos e descobre o UniVerse, um arquipélago formado por seis ilhas totalmente diferentes. Prepare-se, uma jornada de autodescobrimento está prestes a começar.
         </p>
         <div>
-            <button mat-dialog-close id="modal-main-button">
+            <button mat-dialog-close mat-raised-button id="modal-main-button">
                     Vamos lá!
             </button>
         </div>
