--- a/frontend/src/app/routes/test/personality/personality.component.html
+++ b/frontend/src/app/routes/test/personality/personality.component.html
@@ -147,7 +147,7 @@
 
         <div class="footer">
             <a class="button-link">
-                <button id="return-button" routerLink="/">
+                <button mat-raised-button id="return-button" routerLink="/">
                     <img src="./../../assets/images/icons/arrow_circle_left.svg" alt="Ícone de voltar">
                 </button>
             </a>  
