--- a/frontend/src/app/routes/test/result/result.component.html
+++ b/frontend/src/app/routes/test/result/result.component.html
@@ -52,7 +52,7 @@
     
     <div class="footer">
       <a class="button-link" (click)="goToCode()">
-          <button id="return-button">
+          <button mat-raised-button id="return-button">
               <img src="./../../assets/images/icons/arrow_circle_left.svg" alt="Ícone de voltar">
           </button>
       </a>  
