--- a/frontend/src/app/routes/test/statement/statement.component.html
+++ b/frontend/src/app/routes/test/statement/statement.component.html
@@ -63,7 +63,7 @@
   </div>
   <div class="footer">
     <a class="button-link">
-      <button id="return-button" (click)="goToHome()">
+      <button mat-raised-button id="return-button" (click)="goToHome()">
         <img
           src="./../../assets/images/icons/arrow_circle_left.svg"
           alt="Ícone de voltar"
