--- a/frontend/src/app/routes/test/creation/test-creation.component.html
+++ b/frontend/src/app/routes/test/creation/test-creation.component.html
@@ -74,7 +74,7 @@
 
     <div class="footer">
       <a class="button-link" routerLink="/">
-        <button id="return-button">
+        <button mat-raised-button id="return-button">
           <img
             src="./../../assets/images/icons/arrow_circle_left.svg"
             alt="Ícone de voltar"
