--- a/frontend/src/app/routes/test/no-result/no-result.component.html
+++ b/frontend/src/app/routes/test/no-result/no-result.component.html
@@ -38,7 +38,7 @@
 
         <div class="footer">
             <a class="button-link" routerLink="/">
-                <button id="return-button">
+                <button mat-raised-button id="return-button">
                     <img src="./../../assets/images/icons/arrow_circle_left.svg" alt="Ícone de voltar">
                 </button>
             </a>  
