--- a/frontend/src/app/routes/test/statistics/statistics.component.html
+++ b/frontend/src/app/routes/test/statistics/statistics.component.html
@@ -26,7 +26,7 @@
     </div>
     <div class="footer">
         <a class="button-link" (click)="goToResults()">
-          <button id="return-button">
+          <button mat-raised-button id="return-button">
             <img
               src="./../../assets/images/icons/arrow_circle_left.svg"
               alt="Ícone de voltar"
