correções e remoção de console.log

--- a/frontend/src/app/routes/test/creation/test-creation.component.html
+++ b/frontend/src/app/routes/test/creation/test-creation.component.html
@@ -68,7 +68,9 @@
           </div>
         </form>
 
-        <a class="text-link" href="/test/continue"> Já possui um código? </a>
+        <a class="text-link" href="/test/new">
+          Já possui um código?
+        </a>
       </div>
     </div>
 
