--- a/frontend/src/app/routes/test/courses/courses.component.html
+++ b/frontend/src/app/routes/test/courses/courses.component.html
@@ -1,7 +1,7 @@
 <body [ngClass]="results.mostInterested">
   <div class="container-edge" [ngClass]="results.mostInterested">
     <div class="header">
-      <div class="logo">
+      <div class="logo" routerLink="/">
         UniVerse
       </div>
       <div class="user-data">
