--- a/frontend/src/app/routes/test/info/test-info.component.html
+++ b/frontend/src/app/routes/test/info/test-info.component.html
@@ -8,7 +8,7 @@
             Você é um grande explorador!
         </p>
         <p class="text">
-            Em um lindo dia, você sai para navegar em mares desconhecidos e descobre o UniVerse, um arquipélago formado por seis ilhas totalmente diferentes. Prepare-se, uma jornada de autodescobrimento está prestes a começar.
+            Em um lindo dia, você sai para navegar em mares desconhecidos e descobre o UniVerse, uma ilha lendária que abriga seis vilas muito peculiares e distintas. Prepare-se, uma jornada de autodescobrimento está prestes a começar.
         </p>
         <div>
             <button mat-dialog-close mat-raised-button id="modal-main-button">
