--- a/frontend/src/app/routes/test/no-result/no-result.component.html
+++ b/frontend/src/app/routes/test/no-result/no-result.component.html
@@ -1,7 +1,7 @@
 <body>
     <div class="container-edge">
         <div class="header">
-            <div class="logo">
+            <div class="logo" routerLink="/">
                 UniVerse
             </div>
             <div class="user-data">
