--- a/frontend/src/app/routes/test/result/result.component.html
+++ b/frontend/src/app/routes/test/result/result.component.html
@@ -13,7 +13,7 @@
 <body [ngClass]="results.mostInterested">
   <div class="container-edge" [ngClass]="results.mostInterested">
     <div class="header">
-      <div class="logo">
+      <div class="logo" routerLink="/">
           UniVerse
       </div>
       <div class="user-data">
