--- a/frontend/src/app/routes/test/statement/statement.component.html
+++ b/frontend/src/app/routes/test/statement/statement.component.html
@@ -1,7 +1,7 @@
 <body [ngClass]="currentPhaseName">
   <div class="container-edge" [ngClass]="currentPhaseName">
     <div class="header">
-      <div class="logo">UniVerse</div>
+      <div class="logo" routerLink="/">UniVerse</div>
       <div class="user-data">
         <div class="text-block">
           <p class="user-name">{{ username }}</p>
@@ -18,7 +18,7 @@
       >
         <div class="current">
           <div>
-            <p class="info-text">Ilha</p>
+            <p class="info-text">Vilarejo</p>
             <div class="phase-name">
               {{ currentPhaseName }}
             </div>
