--- a/frontend/src/app/routes/test/continuation/test-continuation.component.html
+++ b/frontend/src/app/routes/test/continuation/test-continuation.component.html
@@ -46,7 +46,7 @@
                     </div>
                 </form>
 
-                <a class="text-link" href="/test/new">
+                <a class="text-link" routerLink="/test/new">
                     Não possui um código?
                 </a>
             </div>
