--- a/frontend/src/app/routes/test/creation/test-creation.component.html
+++ b/frontend/src/app/routes/test/creation/test-creation.component.html
@@ -68,7 +68,7 @@
           </div>
         </form>
 
-        <a class="text-link" href="/test/new">
+        <a class="text-link" routerLink="/test/continue">
           Já possui um código?
         </a>
       </div>
